<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersonalITM</string>
    <string name="title_section3">Ylläpito</string>
    <string name="title_section2">Tärkeimmät</string>
    <string name="title_section1">Tehtävät</string>
    
    
    <string name="task_name">Tehtävä: </string>
    <string name="task_priority">Prioriteetti: </string>
    <string name="task_info">Lisätiedot: </string>
    <string name="task_time">Aika: </string>
    <string name="task_date">Päivämäärä: </string>
    <string name="tasks_list">Tehtävälistaus</string>
    <string name="tasks_important">Tärkeimmät tehtävät</string>
    <string name="tasks_manage">Tehtävien hallinta</string>
    <string name="hint_task">tehtävän nimi</string>
    <string name="hint_info">lisätiedot</string>
    <string name="hint_day">pv</string>
    <string name="hint_month">kk</string>
    <string name="hint_year">vvvv</string>
    <string name="hint_hour">tt</string>
    <string name="hint_min">mm</string>
    <string name="priority1">1 (Suuri)</string>
    <string name="priority2">2 (Keski)</string>
    <string name="priority3">3 (Pieni)</string>
    <string name="dot">.</string>
    <string name="colon">:</string>
    
   	<string name="button_add">Lisää</string>
   	<string name="button_save">Tallenna</string>
    <string name="button_delete">Poista</string>
    <string name="button_deleteAll">Poista kaikki</string>
    <string name="button_clear">Tyhjennä</string>
    <string name="button_time">Aika</string>
    
    <string name="error_name">Anna tehtävälle nimi!</string>
    <string name="note_add">Tehtävä lisätty!</string>
    <string name="note_update">Tehtävä päivitetty!</string>
    <string name="note_delete">Tehtävä poistettu!</string>
    <string name="note_deleteAll">Kaikki tehtävät poistettu!</string>
    <string name="note_time">Anna validi aika!</string>
    <string name="note_date">Anna validi päivä!</string>
    <string name="note_old">Ajankohta on mennyt jo!</string>
    
    
    <string name="menu_settings">Asetukset</string>

</resources>