<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- HEADER -->
    
        <TextView android:id="@+id/tasks_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/tasks_list"
        android:padding="15dp"
        />

    <!-- TASK INFO -->
        
   <TextView android:id="@+id/task_info_name"
	   android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="15sp"
       android:paddingLeft="5dp"
       android:padding="5dp" 
       android:text="@string/task_name" 
       android:layout_below="@+id/tasks_list"/>
   
   <TextView android:id="@+id/task_info_priority"
	   android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="12sp"
       android:paddingLeft="5dp" 
       android:padding="5dp" 
       android:text="@string/task_priority"
       android:layout_below="@+id/task_info_name"/>
   
      <TextView android:id="@+id/task_info_date"
	   android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="12sp"
       android:paddingLeft="5dp" 
       android:padding="5dp" 
       android:text="@string/task_date"
       android:layout_below="@+id/task_info_priority"/>
   
   <TextView android:id="@+id/task_info_info"
	   android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="12sp"
       android:text="@string/task_info"
       android:paddingLeft="5dp" 
       android:padding="5dp" 
       android:layout_below="@+id/task_info_date"/>
   
   <!-- TASKLIST -->
   
   <ListView
       android:id="@+id/tasklist"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="15sp"
       android:layout_below="@+id/task_info_info"
       android:paddingLeft="5dp" />


        

</RelativeLayout>